--- a/ExamenJanvier2015/ExamenJanvier2015.csproj
+++ b/ExamenJanvier2015/ExamenJanvier2015.csproj
@@ -49,6 +49,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ExamenCore\ExamenCore.csproj">
+      <Project>{9ebe9181-1d42-496c-b0cc-f88b60348940}</Project>
+      <Name>ExamenCore</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
